refactor: move permission filter logic to permission service